fix h1 alignment

--- a/custom.css
+++ b/custom.css
@@ -31,6 +31,7 @@ h1 {
 	text-align: right;
 	position: absolute;
 	top: 0;
+	right: 0;
 }
 
 h1, h2 {
